# magic

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  Spellbook.json  __main__.py  config.yml  lint.py  magic  path.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  scripts.py  setup.cfg  spellbook.yml  test.py  version.py  write_path.py
.github/workflows/: ci.yml  notes.md  release.yml  review.yml  verify.yml
magic/: Spellbook.json  __init__.py  __main__.py  add.py  add_spell.py  app.py  cast.py  cast_spell.py  config.ini  config.py  delete.py  delete_spell.py  get_help.py  help.py  list.py  old.py  show.py  spellbook.default.json  spellbook.py  spellbook.schema.json  utils.py  version.py
magic/scripts/: __init__.py  write_path.py
magic/shared/: prompt.py  spellbook.py  validate.py  validation.py
magic/utils/: display.py  prompt.py  spellbook.py  validate.py
tests/: conftest.py  context.py  test_app.py  test_shared_display.py  test_shared_validation.py  test_utils_display.py  utils.py
tests/snapshots/: snap_test_shared_display.py  snap_test_shared_validation.py  snap_test_utils_display.py
