[metadata]
name = Magic
version = attr: magic.VERSION

[pylint]
# Put something here

[black]
# Put something here

[bandit]
targets = magic

[tool:pytest]
addopts = --color=yes --cov=magic --cov-report=xml --cov-report=term -ra
filterwarnings =
log_cli = 1
log_cli_level = INFO
log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
log_cli_date_format = %Y-%m-%d %H:%M:%S