[metadata]
name = Magic
version = attr: magic.VERSION
author = Tatu Arvela
home-page = https://github.com/TatuArvela/Magic
description = A tool for simplifying repeated command line tasks
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE

[flake8]
exclude = venv
max-line-length = 120
max-complexity = 10

[isort]
profile = black
skip_gitignore = True

[tool:pytest]
# Put something here